--- a/css/style.default.less
+++ b/css/style.default.less
@@ -36,12 +36,12 @@
     border: none;
 }
 
-.view-background {
+.node-flow-view-bg {
     background: -webkit-linear-gradient(top, transparent @gridSpacing - 1px, @gridColor @gridSpacing),
         -webkit-linear-gradient(left, @viewBgColor @gridSpacing - 1px, @gridColor @gridSpacing);
     background-size: @gridSpacing @gridSpacing;
-    // transition: zoom 0.5s;
-    // zoom: 1;
+    transition: zoom 0.5s;
+    zoom: 1;
 }
 
 .clear-background {
