--- a/css/style.default.css
+++ b/css/style.default.css
@@ -7,8 +7,14 @@
 .node-flow-view-bg {
   background: -webkit-linear-gradient(top, transparent 29px, #2e2e2e 30px), -webkit-linear-gradient(left, #1d1d1d 29px, #2e2e2e 30px);
   background-size: 30px 30px;
-  transition: zoom 0.5s;
-  zoom: 1;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  right: 0;
+  left: 0;
+  padding: 20px;
+  cursor: grab;
+  overflow: hidden;
 }
 .clear-background {
   background-color: transparent !important;
@@ -17,31 +23,33 @@
 /* Node */
 /********/
 .node-widget {
+  position: fixed;
   display: inline-block;
-  min-width: 160px;
+  min-width: 150px;
   border-radius: 6px;
   background: #272727;
   border: 2px solid transparent;
   box-shadow: 0 0 15px #00000080;
   transition: border 0.2s;
   color: #cccccc;
-  font-size: 12px;
-  opacity: 0.8;
+  font-size: 8px;
+  opacity: 0.9;
+  cursor: default;
 }
 .node-widget:hover {
   border: 2px solid #6fbbf5;
 }
 .node-title {
   background: #3f3f3f;
-  height: 32px;
+  height: 28px;
   color: #fff;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 12px;
   padding-left: 10px;
   padding-right: 10px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  line-height: 32px;
+  line-height: 28px;
   cursor: move;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -56,8 +64,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 .interface-in {
   justify-content: flex-start;
@@ -74,8 +82,8 @@
   padding-right: 5px;
   text-align: center;
   white-space: nowrap;
-  height: 24px;
-  line-height: 24px;
+  height: 22px;
+  line-height: 22px;
 }
 .node-exec-label {
   width: 100%;
@@ -84,8 +92,8 @@
 .node-label {
   overflow: hidden;
   text-overflow: ellipsis;
-  height: 18px;
-  line-height: 18px;
+  height: 16px;
+  line-height: 16px;
 }
 .node-control-label {
   background: #505050;
@@ -97,8 +105,8 @@
 /********/
 .node-port-in,
 .node-port-out {
-  min-width: 12px;
-  min-height: 12px;
+  min-width: 10px;
+  min-height: 10px;
   border-radius: 50%;
   background-color: red;
   border: 2px solid #272727;
@@ -106,10 +114,10 @@
   position: absolute;
 }
 .node-port-in {
-  left: -10px;
+  left: -8px;
 }
 .node-port-out {
-  right: -10px;
+  right: -8px;
 }
 .port-int,
 .port-int:active {
@@ -158,8 +166,8 @@
   position: absolute;
   right: 2px;
   bottom: 2px;
-  border-top: 10px solid transparent;
-  border-right: 10px solid #3f3f3f;
+  border-top: 8px solid transparent;
+  border-right: 8px solid #3f3f3f;
   cursor: nw-resize;
 }
 /***********************/
@@ -171,9 +179,11 @@
   color: #cccccc;
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   min-width: 0;
   background: #3f3f3f;
-  height: 24px;
+  height: 22px;
   transition: all 0.3s;
   padding-left: 5px;
   padding-right: 5px;
