--- a/css/style.default.css
+++ b/css/style.default.css
@@ -3,18 +3,16 @@
   padding: 0;
   outline: none;
   border: none;
+  font-family: 'Microsoft Yahei' 'DejaVu Sans Mono' monospace sans-serif;
 }
-.node-flow-view-bg {
+.flow-view {
   background: -webkit-linear-gradient(top, transparent 29px, #2e2e2e 30px), -webkit-linear-gradient(left, #1d1d1d 29px, #2e2e2e 30px);
   background-size: 30px 30px;
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  right: 0;
-  left: 0;
-  padding: 20px;
-  cursor: grab;
   overflow: hidden;
+  position: fixed;
+  cursor: grab;
+  width: 100000px;
+  height: 100000px;
 }
 .clear-background {
   background-color: transparent !important;
@@ -23,8 +21,6 @@
 /* Node */
 /********/
 .node-widget {
-  position: fixed;
-  display: inline-block;
   min-width: 150px;
   border-radius: 6px;
   background: #272727;
@@ -32,7 +28,7 @@
   box-shadow: 0 0 15px #00000080;
   transition: border 0.2s;
   color: #cccccc;
-  font-size: 8px;
+  font-size: 0.7rem;
   opacity: 0.9;
   cursor: default;
 }
@@ -44,13 +40,14 @@
   height: 28px;
   color: #fff;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 0.9rem;
   padding-left: 10px;
   padding-right: 10px;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   line-height: 28px;
   cursor: move;
+  user-select: none;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -76,7 +73,9 @@
 .node-label,
 .node-control-label,
 .node-exec-label {
+  user-select: none;
   color: #cccccc;
+  font-size: 0.7rem;
   font-weight: bold;
   padding-left: 5px;
   padding-right: 5px;
@@ -161,7 +160,7 @@
 .port-exec:hover {
   background-color: #bbbbbb;
 }
-.node-resize-indicator {
+.resize-indicator {
   color: #3f3f3f;
   position: absolute;
   right: 2px;
