--- a/css/style.default.less
+++ b/css/style.default.less
@@ -9,7 +9,8 @@
 
 // node
 @nodeTitleHeight: 28px;
-@nodeFontSize: 8px;
+@nodeFontSize: 0.7rem;
+@nodeTitleFontSize: 0.9rem;
 @nodeTitle: #3f3f3f;
 @nodeBackground: #272727;
 @nodeShadow: #00000080;
@@ -35,20 +36,20 @@
     padding: 0;
     outline: none;
     border: none;
+    font-family: 'Microsoft Yahei' 'DejaVu Sans Mono' monospace sans-serif;
 }
 
-.node-flow-view-bg {
+.flow-view {
     background: -webkit-linear-gradient(top, transparent @gridSpacing - 1px, @gridColor @gridSpacing),
         -webkit-linear-gradient(left, @viewBgColor @gridSpacing - 1px, @gridColor @gridSpacing);
     background-size: @gridSpacing @gridSpacing;
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    right: 0;
-    left: 0;
-    padding: 20px;
-    cursor: grab;
     overflow: hidden;
+    position: fixed;
+    cursor: grab;
+    width: 100000px;
+    height: 100000px;
+    // left: -5000px;
+    // top: -5000px;
 }
 
 .clear-background {
@@ -59,8 +60,6 @@
 /* Node */
 /********/
 .node-widget {
-    position: fixed;
-    display: inline-block;
     min-width: @nodeMinWidth;
     border-radius: 6px;
     background: @nodeBackground;
@@ -81,13 +80,14 @@
     height: @nodeTitleHeight;
     color: #fff;
     font-weight: bold;
-    font-size: @nodeFontSize + 4px;
+    font-size: @nodeTitleFontSize;
     padding-left: 10px;
     padding-right: 10px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     line-height: @nodeTitleHeight;
     cursor: move;
+    user-select: none;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -117,7 +117,9 @@
 .node-label,
 .node-control-label,
 .node-exec-label {
+    user-select: none;
     color: @textColor;
+    font-size: @nodeFontSize;
     font-weight: bold;
     padding-left: 5px;
     padding-right: 5px;
@@ -214,7 +216,7 @@
 }
 
 // Resize indicator
-.node-resize-indicator {
+.resize-indicator {
     color: @indicateColor;
     position: absolute;
     right: 2px;
