--- a/css/style.default.less
+++ b/css/style.default.less
@@ -50,6 +50,21 @@
     height: 100000px;
     // left: -5000px;
     // top: -5000px;
+
+    // .selection-frame {
+    //     position: absolute;
+    //     width: 0px;
+    //     height: 0px;
+    //     font-size: 0px;
+    //     margin: 0px;
+    //     padding: 0px;
+    //     border: 1px dashed #0099ff;
+    //     background-color: #c3d5ed;
+    //     z-index: 1000;
+    //     // filter: alpha;
+    //     opacity: 0.6;
+    //     display: none;
+    // }
 }
 
 .clear-background {
