--- a/css/style.default.css
+++ b/css/style.default.css
@@ -3,7 +3,7 @@
   padding: 0;
   outline: none;
   border: none;
-  font-family: 'Microsoft Yahei' 'DejaVu Sans Mono' monospace sans-serif;
+  font-family: 'Microsoft Yahei', 'DejaVu Sans Mono', monospace, sans-serif;
 }
 .flow-view {
   background: -webkit-linear-gradient(top, transparent 29px, #2e2e2e 30px), -webkit-linear-gradient(left, #1d1d1d 29px, #2e2e2e 30px);
@@ -47,7 +47,6 @@
   border-top-right-radius: 5px;
   line-height: 28px;
   cursor: move;
-  user-select: none;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
