--- a/css/style.default.less
+++ b/css/style.default.less
@@ -36,7 +36,7 @@
     padding: 0;
     outline: none;
     border: none;
-    font-family: 'Microsoft Yahei' 'DejaVu Sans Mono' monospace sans-serif;
+    font-family: 'Microsoft Yahei', 'DejaVu Sans Mono', monospace, sans-serif;
 }
 
 .flow-view {
@@ -102,7 +102,6 @@
     border-top-right-radius: 5px;
     line-height: @nodeTitleHeight;
     cursor: move;
-    user-select: none;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
