--- a/css/style.default.less
+++ b/css/style.default.less
@@ -26,7 +26,7 @@
 @disport: red;
 @intPort: @primaryColor;
 @floatPort: #e76ff6;
-@doublePort: #5df67e;
+// @doublePort: #5df67e;
 @stringPort: #ebf879;
 @boolPort: #fd7191;
 @execPort: white;
@@ -197,13 +197,13 @@
     background-color: @floatPort - #444;
 }
 // double
-.port-double,
-.port-double:active {
-    background-color: @doublePort;
-}
-.port-double:hover {
-    background-color: @doublePort - #444;
-}
+// .port-double,
+// .port-double:active {
+//     background-color: @doublePort;
+// }
+// .port-double:hover {
+//     background-color: @doublePort - #444;
+// }
 // string
 .port-string,
 .port-string:active {
