--- a/css/style.default.css
+++ b/css/style.default.css
@@ -8,11 +8,30 @@
 .flow-view {
   background: -webkit-linear-gradient(top, transparent 29px, #2e2e2e 30px), -webkit-linear-gradient(left, #1d1d1d 29px, #2e2e2e 30px);
   background-size: 30px 30px;
-  overflow: hidden;
+  overflow: hidden !important;
   position: fixed;
+  display: block;
   cursor: grab;
-  width: 100000px;
-  height: 100000px;
+  width: 100%;
+  height: 100%;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.selection-frame {
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  font-size: 0px;
+  margin: 0px;
+  padding: 0px;
+  border: 1px dashed #aaa;
+  background-color: #4b4b4b;
+  z-index: 1000;
+  opacity: 0.6;
+  display: none;
 }
 .clear-background {
   background-color: transparent !important;
@@ -21,7 +40,9 @@
 /* Node */
 /********/
 .node-widget {
-  min-width: 150px;
+  position: absolute;
+  width: 110px;
+  min-width: 110px;
   border-radius: 6px;
   background: #272727;
   border: 2px solid transparent;
@@ -62,16 +83,17 @@
   justify-content: space-between;
   margin-top: 2px;
   margin-bottom: 2px;
+  min-height: 22px;
 }
-.interface-in {
-  justify-content: flex-start;
+.node-interface .input-widget-container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
-.interface-out {
-  justify-content: flex-end;
-}
-.node-label,
-.node-control-label,
-.node-exec-label {
+.node-interface .input-widget-container .node-label,
+.node-interface .input-widget-container .control-label,
+.node-interface .input-widget-container .node-exec-label {
   user-select: none;
   color: #cccccc;
   font-size: 0.7rem;
@@ -83,20 +105,26 @@
   height: 22px;
   line-height: 22px;
 }
-.node-exec-label {
+.node-interface .input-widget-container .node-exec-label {
   width: 100%;
 }
-.node-exec-label,
-.node-label {
+.node-interface .input-widget-container .node-exec-label,
+.node-interface .input-widget-container .node-label {
   overflow: hidden;
   text-overflow: ellipsis;
   height: 16px;
   line-height: 16px;
 }
-.node-control-label {
+.node-interface .input-widget-container .control-label {
   background: #505050;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+}
+.interface-in {
+  justify-content: flex-start;
+}
+.interface-out {
+  justify-content: flex-end;
 }
 /********/
 /* Port */
@@ -164,7 +192,14 @@
 /***********************/
 /* Data Model Controls */
 /***********************/
-.node-item-input,
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+input {
+  -moz-appearance: textfield;
+}
+.input-widget,
 .node-item-selection {
   flex: 1 1 auto;
   color: #cccccc;
@@ -180,7 +215,7 @@
   padding-right: 5px;
 }
 .node-item-selection:hover,
-.node-item-input:hover {
+.input-widget:hover {
   color: #fff;
   background: #505050;
 }
