--- a/css/style.default.less
+++ b/css/style.default.less
@@ -82,6 +82,7 @@
     position: absolute;
     width: @nodeMinWidth;
     min-width: @nodeMinWidth;
+    min-height: @controlHight;
     border-radius: 6px;
     background: @nodeBackground;
     border: 2px solid transparent;
@@ -125,43 +126,43 @@
     margin-top: 2px;
     margin-bottom: 2px;
     min-height: @controlHight;
+}
 
-    .input-widget-container {
-        display: flex;
+.input-widget-container {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+
+    // node label and control label
+    .node-label,
+    .control-label,
+    .node-exec-label {
+        user-select: none;
+        color: @textColor;
+        font-size: @nodeFontSize;
+        font-weight: bold;
+        padding-left: 5px;
+        padding-right: 5px;
+        text-align: center;
+        white-space: nowrap;
+        height: @controlHight;
+        line-height: @controlHight;
+    }
+    .node-exec-label {
         width: 100%;
-        align-items: center;
-        justify-content: space-between;
-
-        // node label and control label
-        .node-label,
-        .control-label,
-        .node-exec-label {
-            user-select: none;
-            color: @textColor;
-            font-size: @nodeFontSize;
-            font-weight: bold;
-            padding-left: 5px;
-            padding-right: 5px;
-            text-align: center;
-            white-space: nowrap;
-            height: @controlHight;
-            line-height: @controlHight;
-        }
-        .node-exec-label {
-            width: 100%;
-        }
-        .node-exec-label,
-        .node-label {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            height: @controlHight - 6px;
-            line-height: @controlHight - 6px;
-        }
-        .control-label {
-            background: @controlBgColor + #111;
-            border-top-left-radius: 4px;
-            border-bottom-left-radius: 4px;
-        }
+    }
+    .node-exec-label,
+    .node-label {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        height: @controlHight - 6px;
+        line-height: @controlHight - 6px;
+    }
+    .control-label {
+        background: @controlBgColor + #111;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
     }
 }
 .interface-in {
