--- a/css/style.default.css
+++ b/css/style.default.css
@@ -9,11 +9,11 @@
   background: -webkit-linear-gradient(top, transparent 29px, #2e2e2e 30px), -webkit-linear-gradient(left, #1d1d1d 29px, #2e2e2e 30px);
   background-size: 30px 30px;
   overflow: hidden !important;
-  position: fixed;
+  position: relative;
   display: block;
   cursor: grab;
-  width: 100%;
-  height: 100%;
+  width: 1024px;
+  height: 1024px;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
