--- a/css/style.default.less
+++ b/css/style.default.less
@@ -44,11 +44,11 @@
         -webkit-linear-gradient(left, @viewBgColor @gridSpacing - 1px, @gridColor @gridSpacing);
     background-size: @gridSpacing @gridSpacing;
     overflow: hidden !important;
-    position: fixed;
+    position: relative;
     display: block;
     cursor: grab;
-    width: 100%;
-    height: 100%;
+    width: 1024px;
+    height: 1024px;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
