--- a/css/style.default.less
+++ b/css/style.default.less
@@ -255,6 +255,14 @@
 }
 
 /***********************/
+/*      Connection     */
+/***********************/
+.aproch-conn{
+    fill: none;
+    stroke-width: 2;
+}
+
+/***********************/
 /* Data Model Controls */
 /***********************/
 input::-webkit-outer-spin-button,
