--- a/css/style.default.less
+++ b/css/style.default.less
@@ -258,8 +258,12 @@
 /*      Connection     */
 /***********************/
 .aproch-conn{
-    fill: none;
-    stroke-width: 2;
+    position: absolute;
+    border: 2px solid red;
+    .conn-path {
+        fill: none;
+        stroke-width: 2;    
+    }
 }
 
 /***********************/
