--- a/core/style/style.default.less
+++ b/core/style/style.default.less
@@ -8,6 +8,12 @@
     font-family: 'Microsoft Yahei', 'DejaVu Sans Mono', monospace, sans-serif;
 }
 
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
 .flow-view {
     background: -webkit-linear-gradient(top, transparent @gridSpacing - 1px, @gridColor @gridSpacing),
         -webkit-linear-gradient(left, @viewBgColor @gridSpacing - 1px, @gridColor @gridSpacing);
@@ -16,13 +22,30 @@
     position: relative;
     display: block;
     cursor: grab;
-    width: 4096px;
-    height: 4096px;
+    width: 2048px;
+    height: 2048px;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    .guid-line-h {
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        top: 50%;
+        background: @controlNormalBg;
+        transform: translateY(-150%);
+    }
+    .guid-line-v {
+        position: absolute;
+        width: 2px;
+        height: 100%;
+        left: 50%;
+        background: @controlNormalBg;
+        transform: translateX(-150%);
+    }
 }
 
 .selection-frame {
@@ -30,13 +53,10 @@
     width: 0px;
     height: 0px;
     font-size: 0px;
-    margin: 0px;
-    padding: 0px;
     border: 1px dashed #aaa;
     background-color: #4b4b4b;
     z-index: 1000;
     opacity: 0.6;
-    display: none;
 }
 
 .clear-background {
