--- a/core/style/variable.less
+++ b/core/style/variable.less
@@ -51,6 +51,8 @@
 @nodeShadow: #00000080;
 @nodeMinWidth: 110px;
 @indicateColor: #3f3f3f;
+@nodeHoverBorder: 2px solid @borderHoverColor;
+@nodeSelectedBorder: 2px solid @primaryColor;
 
 // port
 @portSize: 12px;
