--- a/core/style/variable.less
+++ b/core/style/variable.less
@@ -1,15 +1,25 @@
-@primaryColor: #6fbbf5;
-@primaryHoverColor: #8bb4ff;
-@primaryActiveColor: #58a9e7;
+// primary style
+@primaryColor: #006cbe;
+@primaryHoverColor: #0078d4;
+@primaryActiveColor: #005ca3;
+@primaryLightColor: #4ea1e1;
+@primaryLightHoverColor: #68afe5;
+@primaryLightActiveColor: #3d98de;
+
+// helper
+@dimColor: rgba(0, 0, 0, 0.3);
 @lightColor: #ffffff;
+@alertColor: red;
+@infoColor: #12d60c;
+@warningColor: #ccb805;
 
 // control
-@controlNormalBg: #454545;
-@controlHoverBg: #4d4d4d;
-@controlActiveBg: #424242;
-@controlDarkBg: #2b2b2b;
-@controlLightBg: #b8b8b8;
-@controlHight: 22px;
+@controlBgNormalColor: #454545;
+@controlBgHoverColor: #4d4d4d;
+@controlBgActiveColor: #424242;
+@controlBgDarkColor: #2b2b2b;
+@controlBgLightColor: #b8b8b8;
+@controlHeight: 22px;
 
 // border
 @borderNormalColor: #737373;
@@ -24,13 +34,6 @@
 @panelBackground: #3b3b3b;
 @panelShadow: 0px 1.6px 3.6px #00000041, 0px 0px 2.9px #00000037;
 @popItemShadow: 0px 12.8px 28.8px #00000041, 0px 0px 9.2px #00000037;
-
-// helper
-@dimColor: rgba(0, 0, 0, 0.3);
-@lightColor: #ffffff;
-@alertColor: red;
-@infoColor: #12d60c;
-@warningColor: #ccb805;
 
 /*********/
 /** Node */
