--- a/core/component/css/component-style.default.less
+++ b/core/component/css/component-style.default.less
@@ -512,7 +512,7 @@ input[type='range']::-webkit-slider-thumb:hover {
     border-radius: 4px;
     background: @panelBackground;
     padding: 4px;
-    position: absolute;
+    position: fixed;
 }
 
 .fold-up-indicator {
